k8s/nextjs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
spec:
  selector:
    app: nextjs-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
